kubernetes/apps/argo-cd/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  annotations:
    metallb.io/loadBalancerIPs: 192.168.123.201
spec:
  type: LoadBalancer
