kubernetes/apps/argo-cd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-test
spec:
  parentRefs:
  - name: gateway
    namespace: istio-system
  hostnames:
    - lab.home.arpa
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /argo
      backendRefs:
        - name: argocd-server
          port: 80
